Fixed date/header alignment issue

--- a/assets/screen.css
+++ b/assets/screen.css
@@ -37,7 +37,7 @@ h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a, h1 > a:hover, h2 > a:hover, h3 >
    text-decoration: none;
 }
 
-#date {
+.date {
   margin-top: 24px;
 }
 
